# datafusion-python

./: .asf.yaml  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ARTIFACTORY.md  CHANGELOG.md  Cargo.toml  Dockerfile-build-wheel.arm64  Dockerfile-build-wheel.x86_64  README.md  SKILL.md  api.html  build-linux-arm64.sh  build-linux.sh  build.rs  conftest.py  genindex.html  index.html  links.html  llms.txt  mkdocs.yml  objects.inv  pickle-redesign-plan.md  py-modindex.html  pyproject.toml  reproduce_1300.py  requirements-310.txt  requirements-311.txt  requirements-312.txt  requirements-313.txt  requirements-37.txt  requirements.in  requirements.txt  rustfmt.toml  search.html  searchindex.js  test_udaf_script.py
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  conda.yml  dev.yml  docs.yaml  release.yml  test.yaml  test.yml  verify-release-candidate.yml
.ipynb_checkpoints/: test_large_query-checkpoint.ipynb
_modules/: index.html
_modules/datafusion/: context.html  dataframe.html  expr.html  functions.html
_sources/: index.rst.txt  links.rst.txt
_sources/api/: functions.rst.txt  object_store.rst.txt
_sources/autoapi/: index.rst.txt
_sources/contributor-guide/: introduction.rst.txt
_sources/user-guide/: basics.rst.txt  configuration.rst.txt  data-sources.rst.txt  dataframe.rst.txt  distributing-work.md.txt  introduction.rst.txt  sql.rst.txt  upgrade-guides.rst.txt
_static/: theme_overrides.css  toc-toggle.js
api/: config.html  dataframe.html  execution_context.html  expression.html  functions.html  index.html  object_store.html
autoapi/: index.html
autoapi/datafusion/: index.html
benchmarks/: max_cpu_usage.py
benchmarks/db-benchmark/: README.md  db-benchmark.dockerfile  groupby-datafusion.py  join-datafusion.py  run-bench.sh
benchmarks/tpch/: .gitignore  README.md  create_tables.sql  tpch-gen.sh  tpch.py
ci/scripts/: python_lint.sh  rust_clippy.sh
conda/environments/: datafusion-cuda-dev.yaml  datafusion-dev.yaml
contributor-guide/: ffi.html  index.html  introduction.html
crates/core/: Cargo.toml
crates/core/src/: analyzer.rs  array.rs  catalog.rs  codec.rs  context.rs  dataframe.rs  dataset.rs  dataset_exec.rs  distributed_worker.rs  distributed_worker_resolver.rs  errors.rs  expr.rs  functions.rs  lib.rs  metrics.rs  optimizer_rules.rs  options.rs  physical_optimizer.rs  physical_plan.rs  record_batch.rs  spark_functions.rs  store.rs  substrait.rs  table.rs  udaf.rs  udf.rs  udtf.rs  udwf.rs  utils.rs
crates/core/src/common/: data_type.rs  df_schema.rs  schema.rs
crates/core/src/expr/: aggregate.rs  aggregate_expr.rs  alias.rs  analyze.rs  case.rs  cast.rs  conditional_expr.rs  copy_to.rs  create_catalog.rs  create_catalog_schema.rs  create_external_table.rs  create_function.rs  create_index.rs  create_view.rs  distinct.rs  dml.rs  drop_catalog_schema.rs  drop_function.rs  drop_table.rs  drop_view.rs  empty_relation.rs  exists.rs  explain.rs  extension.rs  filter.rs  grouping_set.rs  higher_order_function.rs  in_list.rs  in_subquery.rs  indexed_field.rs  join.rs  lambda.rs  lambda_variable.rs  like.rs  limit.rs  literal.rs  logical_node.rs  placeholder.rs  recursive_query.rs  repartition.rs  (+9 more)
crates/core/src/sql/: exceptions.rs  logical.rs
crates/core/src/unparser/: dialect.rs  mod.rs
datafusion/: __init__.py  common.py  context.py  cudf.py  datacontainer.py  object_store.py  pandas.py  polars.py  store.py
dev/: build-set-env.sh  check_api_coverage.py  check_crates_patch.py  clean.sh  create_license.py  python_lint.sh  rewrite_doc_roles.py  rust_lint.sh
docs/: .gitignore  Makefile  README.md  build.sh  griffe_extensions.py  hooks.py  make.bat  requirements.txt
examples/: README.md  array-operations.py  create-context.py  csv-read-options.py  dataframe-parquet.py  distributed-localhost-worker.py  distributed-run.py  export.py  import.py  multiprocessing_pickle_expr.py  python-udaf.py  python-udf-comparisons.py  python-udf.py  python-udwf.py  query-pyarrow-data.py  ray_pickle_expr.py  sql-on-cudf.py  sql-on-pandas.py  sql-on-polars.py  sql-parquet-s3.py  sql-parquet.py  sql-to-pandas.py  sql-using-python-udaf.py  sql-using-python-udf.py  substrait.py
examples/datafusion-ffi-example/: Cargo.toml  pyproject.toml
examples/datafusion-ffi-example/python/tests/: _test_aggregate_udf.py  _test_catalog_provider.py  _test_config.py  _test_execution_plan.py  _test_logical_extension_codec.py  _test_physical_expr.py  _test_physical_extension_codec.py  _test_physical_optimizer_rule.py  _test_pickle_strict_ffi.py  _test_scalar_udf.py  _test_schema_provider.py  _test_table_function.py  _test_table_provider.py  _test_table_provider_factory.py  _test_window_udf.py  conftest.py
examples/datafusion-ffi-example/src/: aggregate_udf.rs  catalog_provider.rs  config.rs  execution_plan.rs  lib.rs  logical_extension_codec.rs  physical_expr.rs  physical_extension_codec.rs  physical_optimizer.rs  scalar_udf.rs  table_function.rs  table_provider.rs  table_provider_factory.rs  utils.rs  window_udf.rs
examples/ffi-library/: Cargo.toml  pyproject.toml
examples/ffi-library/python/tests/: _test_scalar_udf.py  _test_table_provider.py
examples/ffi-library/src/: lib.rs  scalar_udf.rs  table_provider.rs
examples/ffi-table-provider/: Cargo.toml  pyproject.toml
examples/ffi-table-provider/python/tests/: _test_table_provider.py
examples/ffi-table-provider/src/: lib.rs
src/: array.rs  catalog.rs  common.rs  config.rs  context.rs  dataframe.rs  dataset.rs  dataset_exec.rs  datatype.rs  errors.rs  expr.rs  expression.rs  ffi.rs  functions.rs  lib.rs  logical.rs  metrics.rs  options.rs  physical_plan.rs  pyarrow_filter_expression.rs  pyarrow_util.rs  record_batch.rs  sql.rs  store.rs  substrait.rs  table.rs  udaf.rs  udf.rs  udtf.rs  udwf.rs  utils.rs  window_frame.rs
tests/: dataframe_into_view.rs
user-guide/: ai-coding-assistants.html  basics.html  configuration.html  data-sources.html  dataframe.html  distributing-work.html  index.html  introduction.html  sql.html  upgrade-guides.html
(+587 files in other folders)
