# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "datafusion-python"
version = "51.0.0"
homepage = "https://datafusion.apache.org/python"
repository = "https://github.com/apache/datafusion-python"
authors = ["Apache DataFusion <dev@datafusion.apache.org>"]
description = "Apache DataFusion DataFrame and SQL Query Engine"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.78"
include = [
    "/src",
    "/datafusion",
    "/LICENSE.txt",
    "build.rs",
    "pyproject.toml",
    "Cargo.toml",
    "Cargo.lock",
]

[features]
default = ["mimalloc"]
protoc = ["datafusion-substrait/protoc"]
substrait = ["dep:datafusion-substrait"]

[dependencies]
tokio = { version = "1.47", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
] }
pyo3 = { version = "0.26", features = [
    "extension-module",
    "abi3",
    "abi3-py310",
] }
pyo3-async-runtimes = { version = "0.26", features = ["tokio-runtime"] }
pyo3-log = "0.13.2"
arrow = { version = "57", features = ["pyarrow"] }
arrow-select = { version = "57" }
datafusion = { version = "51", features = ["avro", "unicode_expressions"] }
datafusion-substrait = { version = "51", optional = true }
datafusion-proto = { version = "51" }
datafusion-ffi = { version = "51" }
prost = "0.14.1" # keep in line with `datafusion-substrait`
uuid = { version = "1.18", features = ["v4"] }
mimalloc = { version = "0.1", optional = true, default-features = false, features = [
    "local_dynamic_tls",
] }
async-trait = "0.1.89"
futures = "0.3"
cstr = "0.2"
object_store = { version = "0.12.4", features = [
    "aws",
    "gcp",
    "azure",
    "http",
] }
url = "2"
log = "0.4.27"
parking_lot = "0.12"

[build-dependencies]
prost-types = "0.14.1"     # keep in line with `datafusion-substrait`
pyo3-build-config = "0.26"

[lib]
name = "datafusion_python"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
