# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "datafusion-ffi-example"
version = "0.2.0"
edition = "2021"

[dependencies]
#datafusion-catalog = { version = "51" , default-features = false }
#datafusion-common = { version = "51" , default-features = false }
#datafusion-functions-aggregate = { version = "51"  }
#datafusion-functions-window = { version = "51"  }
#datafusion-expr = { version = "51"  }
#datafusion-ffi = { version = "51" }
datafusion-catalog = { git = "https://github.com/apache/datafusion.git", rev = "bc043c3a5fe448fc5735d9fa173b69ac95a7e11c" , default-features = false }
datafusion-common = { git = "https://github.com/apache/datafusion.git", rev = "bc043c3a5fe448fc5735d9fa173b69ac95a7e11c" , default-features = false }
datafusion-functions-aggregate = { git = "https://github.com/apache/datafusion.git", rev = "bc043c3a5fe448fc5735d9fa173b69ac95a7e11c"  }
datafusion-functions-window = { git = "https://github.com/apache/datafusion.git", rev = "bc043c3a5fe448fc5735d9fa173b69ac95a7e11c"  }
datafusion-expr = { git = "https://github.com/apache/datafusion.git", rev = "bc043c3a5fe448fc5735d9fa173b69ac95a7e11c"  }
datafusion-ffi = { git = "https://github.com/apache/datafusion.git", rev = "bc043c3a5fe448fc5735d9fa173b69ac95a7e11c" }

pyo3 = { version = "0.26", features = ["extension-module", "abi3", "abi3-py39"] }
arrow = { version = "57" }
arrow-array = { version = "57" }
arrow-schema = { version = "57" }
async-trait = "0.1.89"

[build-dependencies]
pyo3-build-config = "0.26"

[lib]
name = "datafusion_ffi_example"
crate-type = ["cdylib", "rlib"]
