[package]
name = "ffi-table-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
datafusion = { version = "43.0.0" }
datafusion-ffi = { version = "43.0.0" }
pyo3 = { version = "0.22.6", features = ["extension-module", "abi3", "abi3-py38"] }
arrow = { version = "53.2.0" }
arrow-array = { version = "53.2.0" }
arrow-schema = { version = "53.2.0" }

[build-dependencies]
pyo3-build-config = "0.22.6"

[lib]
name = "ffi_table_provider"
crate-type = ["cdylib", "rlib"]
