# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "ffi-table-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
datafusion = { version = "44.0.0" }
datafusion-ffi = { version = "44.0.0" }
pyo3 = { version = "0.22.6", features = ["extension-module", "abi3", "abi3-py38"] }
arrow = { version = "53.2.0" }
arrow-array = { version = "53.2.0" }
arrow-schema = { version = "53.2.0" }

[build-dependencies]
pyo3-build-config = "0.22.6"

[lib]
name = "ffi_table_provider"
crate-type = ["cdylib", "rlib"]
